html-assignment/style.css
/* Inheritance - body styling */
body {
    font-family: "Times New Roman", Times, serif;
    font-size: 18px;
}

/* select multiple elements - header and footer */
header, footer {
    background-color: #ffee00;
}

/* Samir Kharat or the title basically in a browner, darker color*/
.site-title {
    color: #654321;
}

/* dropshadow for img */
#daily {
    box-shadow: 0px 0px 2px 1px black;
}

/* replace bullets with squares from assignment requirements */
ul {
    list-style: square;
}

/* nth child selector */
#hobby-list li:nth-child(odd) {
    background-color: rgb(178, 129, 32);
}

/* navigation styling */
nav ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

/* horizontal navigation */
nav li {
  display: inline-block; 
  margin-right: 10px;
}

/* removes the underline from text */
nav a {
  text-decoration: none;      
  padding: 10px 15px;
  background-color: rgb(220, 248, 141);
  border: 1px solid black;
  color: black;
}

/* color changes on hover or focus over text/object */
nav a:hover,
nav a:focus {
  background-color: rgba(110, 231, 255, 0.546); 
}

